# pyruTorrent

./: README.md  pyproject.toml  requirements.txt
pyruTorrent/: __init__.py  pyruTorrent.py
